# CapturaChess

./: CapturaChess.spec  Compilar.bat  README.md  pyproject.toml
Entrenamiento/: Pilla_Cudas.py  Prueba.py
Entrenamiento/Datasets/1Gloriosa/: train.cache  val.cache
Entrenamiento/Datasets/1Gloriosa/train/: _tokenization.txt
Entrenamiento/Datasets/2Gloriosa/: train.cache  val.cache
src/: main.py
src/_internal/: ajedrez.sqlite3  config.ini
src/_internal/resultados/2_fichasAjedrez_small/: args.yaml  results.csv
src/interfaz/: App.py  Confiugracion.py  Grabar.py  PartidasPrevias.py  ventana_imagen.py  ventana_partida.py  ventana_tablero.py
src/interfaz/Elementos/: Boton.py
src/reconocimiento/: Ajedrez.py  ChessMio.py  IA.py  tablero.py
src/utils/: CamarasDispositivo.py  GestionConfiguracion.py  GestionDAO.py
