[tool.poetry]
name = "04-lagloriosa"
version = "0.1.0"
description = ""
authors = ["Antonio <mail@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-contrib-python = "^4.9.0.80"
scipy = "^1.13.0"
chess = "^1.10.0"
torch = {version = "^2.4.0+cu121", source = "pytorch_cuda"}
ultralytics = "^8.2.34"
torchvision = {version = "^0.19.0+cu121", source = "pytorch_cuda"}
customtkinter = "^5.2.2"
cairosvg = "^2.7.1"
windows-capture-devices = "1.0.0"
ctkmessagebox = "^2.5"

[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
